--- a/src/app/component/admin/list-experts/list-experts.component.html
+++ b/src/app/component/admin/list-experts/list-experts.component.html
@@ -54,9 +54,9 @@
                             class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">{{item.isBlocked
                             ? "Unblock" : "Block" }}</button>
                     </td>
-                    <td class="px-6 py-4 text-right">
+                    <!-- <td class="px-6 py-4 text-right">
                         <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
+                    </td> -->
                 </tr>
 
 
