--- a/src/app/component/users/schedules/schedules.component.html
+++ b/src/app/component/users/schedules/schedules.component.html
@@ -1,1 +1,302 @@
-<app-navbar></app-navbar>
+<main>
+    <div class=" overflow-x-hidden overflow-y-hidden">
+        <app-navbar></app-navbar>
+        <section class="hero">
+            <div class="bg-[#FFE7DE] w-full mt-14 p-16 pb-0">
+                <div class="flex  justify-around grid-rows-2">
+                    <div>
+                        <h1 class="font-semibold text-lg md:text-2xl leading-normal"><span
+                                class="text-orange-500 leading-normal">Your Safe Space to Talk and Heal</span> at<br>
+                            Now&Me </h1>
+                    </div>
+                    <div class="">
+                        <svg viewBox="0 0 124 92" fill="none" xmlns="http://www.w3.org/2000/svg"
+                            class="w-[40px] h-[40px] md:w-[124px] md:h-[92px] absolute top-16 left-0">
+                            <path
+                                d="M121-2c-2 27-17 30-27.345 29.25-10.345-.75-20.585-15.899-35.397-4.295C47.125 31.676 56.006 49.797 44 57c-15 9-24.32 1.343-31.5-1.25C-14.5 46-30.5 66.5-29 91"
+                                stroke="#FFC6B5" stroke-width="6"></path>
+                        </svg>
+                    </div>
+                    <div class="pl-5">
+                        <div class="-mt-16 ml-14 pl-7">
+                            <img class="h-44"
+                                src="../../../../assets/image/undraw_Happy_announcement_re_tsm0-removebg-preview.png"
+                                alt="">
+                        </div>
+                    </div>
+                    <div class="-mt-5">
+                        <svg viewBox="0 0 176 132" fill="none" xmlns="http://www.w3.org/2000/svg"
+                            class="hidden md:block w-[88px] h-[66px] md:w-[176px] md:h-[132px] absolute  right-0">
+                            <path
+                                d="M5 134c1.17-15.872 8.575-23.598 17.151-26.819s17.93 5.258 29.833 8.546c5.249 1.45 11.485 5.137 19.747 0 4.626-2.877 5.871-9.093 7.72-21.682 1.45-9.873 6.627-20.798 14.033-24.63 12.109-6.263 21.785.553 31.573 7.128 15.853 10.65 45.278 10.472 59.249-29.02C191.195 28.05 194.831 7.02 196 1"
+                                stroke="#FFC6B5" stroke-width="10"></path>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="changwnavigation">
+            <div class="flex justify-center mt-10">
+                <div class="space-x-0">
+                    <button class="bg-transparent rounded-l-xl text-[#059669] border-2 px-36 py-2"
+                        type="button">Chats</button>
+                    <button type="button"
+                        class="bg-transparent px-36  rounded-e-xl py-2 text-[#059669] border-2">Appoinments</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="chats-componet">
+            <div class="flex justify-center pt-8">
+                <div class="p-4 w-1/3  text-center ">
+                    <h5 class="text-gray-700 font-semibold  text-lg"> <span class="text-2xl  ">🎉</span> Break the
+                        Silence, Find Your Inner Peace</h5>
+                    <svg width="250" height="11" viewBox="0 0 149 11" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        class="ml-28">
+                        <path
+                            d="M1.67188 9.3999C8.47091 1.6097 14.254 2.49642 19.8471 2.40267C27.6614 2.27169 29.4813 6.82827 34.7211 8.40847C40.8343 10.252 46.0658 6.57986 50.3153 5.33616C52.7986 4.60937 55.2927 4.14208 57.8344 4.20629C61.2436 4.29242 64.3176 7.7547 67.6538 8.64751C70.9373 9.52621 73.9298 8.81145 77.0033 7.05887C78.3838 6.27169 79.7089 5.34577 81.1075 4.61336C82.8666 3.69219 84.8003 3.23567 86.7383 3.04276M86.7383 3.04276C87.6873 2.9483 88.6373 2.91704 89.5684 2.92537M86.7383 3.04276C87.6284 2.96911 88.5845 2.92261 89.5684 2.92537M89.5684 2.92537C90.0742 2.9299 90.5744 2.94611 91.0658 2.97022M89.5684 2.92537C92.1615 2.93266 94.9479 3.28217 97.2279 4.37882C98.6523 5.06391 100.01 5.94486 101.418 6.68529C104.554 8.3338 107.57 8.94785 110.82 7.95964C114.122 6.95557 117.068 3.39238 120.472 3.19205C123.01 3.04269 125.519 3.42612 128.028 4.06923C132.32 5.16977 138.15 9.6473 146.672 3.55006"
+                            stroke="#FF6D42" stroke-width="3" stroke-linecap="round"></path>
+                    </svg>
+                    <!-- <svg width="250" height="11" viewBox="0 0 149 11" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        class="ml-28 -mt-1">
+                        <path
+                            d="M1.67188 9.3999C8.47091 1.6097 14.254 2.49642 19.8471 2.40267C27.6614 2.27169 29.4813 6.82827 34.7211 8.40847C40.8343 10.252 46.0658 6.57986 50.3153 5.33616C52.7986 4.60937 55.2927 4.14208 57.8344 4.20629C61.2436 4.29242 64.3176 7.7547 67.6538 8.64751C70.9373 9.52621 73.9298 8.81145 77.0033 7.05887C78.3838 6.27169 79.7089 5.34577 81.1075 4.61336C82.8666 3.69219 84.8003 3.23567 86.7383 3.04276M86.7383 3.04276C87.6873 2.9483 88.6373 2.91704 89.5684 2.92537M86.7383 3.04276C87.6284 2.96911 88.5845 2.92261 89.5684 2.92537M89.5684 2.92537C90.0742 2.9299 90.5744 2.94611 91.0658 2.97022M89.5684 2.92537C92.1615 2.93266 94.9479 3.28217 97.2279 4.37882C98.6523 5.06391 100.01 5.94486 101.418 6.68529C104.554 8.3338 107.57 8.94785 110.82 7.95964C114.122 6.95557 117.068 3.39238 120.472 3.19205C123.01 3.04269 125.519 3.42612 128.028 4.06923C132.32 5.16977 138.15 9.6473 146.672 3.55006"
+                            stroke="#FF6D42" stroke-width="3" stroke-linecap="round"></path>
+                    </svg> -->
+                </div>
+            </div>
+            <div class=" ">
+                <div class=" mt-10 m-48 flex h-fit border    border-gray-500 ">
+
+                    <!-- chatting listing area -->
+                    <div class="bg-white w-full border-r border-gray-500 pb-10 ">
+
+                        <div class=" p-5  flex  justify-center">
+                            <div class="">
+                                <div><button
+                                        class="text-orange-500  bg-transparent font-medium border-b-2 border-gray-500 py-2 px-5">Active
+                                        Chats</button></div>
+
+                            </div>
+                            <div class="">
+                                <div><button class="text-orange-500  bg-transparent font-medium py-2 px-5">Previous
+                                        Chats
+                                    </button></div>
+
+
+                            </div>
+
+
+                        </div>
+
+                        <div class="  ml-8 mr-8 mb-0 border border-gray-200  pt-5 pb-5">
+
+
+                            <div class="flex items-center gap-4 pl-4 ">
+                                <img alt="Women"
+                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                    class="h-12 w-12 rounded-lg object-cover" />
+
+                                <div>
+                                    <p class="font-medium text-black">Carol Daines</p>
+
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="  ml-8 mr-8 mb-0 border border-gray-200  pt-5 pb-5">
+
+
+                            <div class="flex items-center gap-4 pl-4 ">
+                                <img alt="Women"
+                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                    class="h-12 w-12 rounded-lg object-cover" />
+
+                                <div>
+                                    <p class="font-medium text-black">Carol Daines</p>
+
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="   ml-8 mr-8 mb-0 border border-gray-200  pt-5 pb-5">
+
+
+                            <div class="flex items-center gap-4 pl-4 ">
+                                <img alt="Women"
+                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                    class="h-12 w-12 rounded-lg object-cover" />
+
+                                <div>
+                                    <p class="font-medium text-black">Carol Daines</p>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class=" ml-8 mr-8 mb-0 border border-gray-200   pt-5 pb-5">
+
+
+                            <div class="flex items-center gap-4 pl-4 ">
+                                <img alt="Women"
+                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                    class="h-12 w-12 rounded-lg object-cover" />
+
+                                <div>
+                                    <p class="font-medium text-black">Carol Daines</p>
+
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                    <!-- messaging area -->
+                    <div class="relative w-full ">
+                        <div class=" bg-white    pb-10 overflow-y-auto max-h-[500px]">
+
+
+                            <div class="  bg-[#FFC6B5]    pt-2 pb-2">
+
+
+                                <div class="flex items-center gap-4 pl-4 ">
+                                    <img alt="Women"
+                                        src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                        class="h-12 w-12 rounded-lg object-cover" />
+
+                                    <div>
+                                        <p class="font-medium text-black">Carol Daines</p>
+
+
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--first  message from expert -->
+                            <div class="  flex justify-end pb-4 pt-4 ">
+                                <div class="flex  space-y-2 space-x-2">
+
+                                    <div class="p-6  px-32  bg-slate-100 rounded-l-lg h-fit">
+
+                                    </div>
+
+                                    <div class="mt-8  ">
+                                        <img class="w-10 h-10 -mt-3 rounded-full  "
+                                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                            alt="Rounded avatar">
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- second message from experts -->
+                            <div class="  flex justify-end pb-4 pt-4 ">
+                                <div class="flex  space-y-2 space-x-2">
+
+                                    <div class="p-6  px-32  bg-slate-100 rounded-l-lg h-fit">
+
+                                    </div>
+
+                                    <div class="mt-8  ">
+                                        <img class="w-10 h-10 -mt-3 rounded-full  "
+                                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                            alt="Rounded avatar">
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <!-- first message of user -->
+                            <div class="  flex  pb-4 pt-4 ">
+                                <div class="flex  ">
+                                    <div class="mt-8  px-2">
+                                        <img class="w-10 h-10 -mt-10 rounded-full "
+                                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                            alt="Rounded avatar">
+                                    </div>
+                                    <div class="p-6 px-32  bg-slate-100 rounded-r-lg h-fit"></div>
+                                </div>
+                            </div>
+
+                            <!-- 3 message from expert -->
+                            <div class="  flex justify-end pb-4 pt-4 ">
+                                <div class="flex  space-y-2 space-x-2">
+
+                                    <div class="p-6  px-32  bg-slate-100 rounded-l-lg h-fit">
+
+                                    </div>
+
+                                    <div class="mt-8  ">
+                                        <img class="w-10 h-10 -mt-3 rounded-full  "
+                                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                            alt="Rounded avatar">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- second message of user -->
+                            <div class="  flex  pb-4 pt-4 ">
+                                <div class="flex  ">
+                                    <div class="mt-8  px-2">
+                                        <img class="w-10 h-10 -mt-10 rounded-full "
+                                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                            alt="Rounded avatar">
+                                    </div>
+                                    <div class="p-6 px-32  bg-slate-100 rounded-r-lg h-fit"></div>
+                                </div>
+                            </div>
+
+
+
+                        </div>
+
+                        <!-- input field for chatting -->
+                        <div class=" bottom-0  absolute w-full ">
+                            <form>
+                                <label for="chat" class="sr-only">Your message</label>
+                                <div class="flex items-center px-3  py-2  bg-gray-50 dark:bg-gray-700">
+                                    <button type="button"
+                                        class="inline-flex justify-center p-2 text-gray-500 rounded-lg cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600">
+
+                                        <span class="sr-only">Upload image</span>
+                                    </button>
+                                    <button type="button"
+                                        class="p-2 text-gray-500 rounded-lg cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600">
+                                        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                                            fill="none" viewBox="0 0 20 20">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                                stroke-width="2"
+                                                d="M13.408 7.5h.01m-6.876 0h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM4.6 11a5.5 5.5 0 0 0 10.81 0H4.6Z" />
+                                        </svg>
+                                        <span class="sr-only">Add emoji</span>
+                                    </button>
+                                    <input type="text" id="chat" rows="1"
+                                        class="block mx-4 p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                        placeholder="Your message...">
+                                    <button type="submit"
+                                        class="inline-flex justify-center p-2 text-orange-500 rounded-full cursor-pointer hover:bg-orange-100 dark:text-blue-500 dark:hover:bg-gray-600">
+                                        <svg class="w-5 h-5 rotate-90" aria-hidden="true"
+                                            xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
+                                            <path
+                                                d="m17.914 18.594-8-18a1 1 0 0 0-1.828 0l-8 18a1 1 0 0 0 1.157 1.376L8 18.281V9a1 1 0 0 1 2 0v9.281l6.758 1.689a1 1 0 0 0 1.156-1.376Z" />
+                                        </svg>
+                                        <span class="sr-only">Send message</span>
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+
+
+                    </div>
+
+                </div>
+            </div>
+
+
+        </section>
+        <div>
+            <app-footer></app-footer>
+        </div>
+    </div>
+</main>
