--- a/src/app/component/users/community/community.component.html
+++ b/src/app/component/users/community/community.component.html
@@ -28,8 +28,8 @@
                         <!-- <textarea id="message" rows="4"
                             class="  w-2/3 text-[18px] text-slate-900 bg-gray-50 rounded-lg border border-gray-300 h-16 "
                             placeholder="Write your thoughts here... "></textarea> -->
-                        <input type="text" data-modal-toggle="authentication-modal"
-                            class="block w-2/3 rounded-md border-gray-300 py-3 text-xl shadow-sm focus:border-primary-400 focus:ring focus:ring-primary-200 focus:ring-opacity-50 disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500"
+                        <input type="text" (click)="openModal1()"
+                            class="block   w-2/3 rounded-md border-gray-300 py-3 text-xl shadow-sm focus:border-primary-400 focus:ring focus:ring-primary-200 focus:ring-opacity-50 disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500"
                             placeholder="Write your thoughts here..." />
                     </form>
                 </div>
@@ -326,19 +326,20 @@
 
 
 
-<!-- Main modal -->
-<div id="authentication-modal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
-    class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+<!-- post modal -->
+<div [ngClass]="{'hidden': !modalOpen1}"
+    class="fixed ml-96 top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
 
     <div class=" w-full md:w-1/2 max-h-full md:h-1/2">
-
+        <div class="fixed inset-0 transition-opacity" (click)="closeModal1()">
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+        </div>
         <!-- Modal content -->
         <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 ">
 
 
             <button type="button" (click)="removeAlltags()"
-                class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                data-modal-hide="authentication-modal">
+                class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white">
                 <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                     viewBox="0 0 14 14">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -436,16 +437,18 @@
 </div>
 
 <!-- modal for editing -->
-<div id="modal1" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
-    class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+<div [ngClass]="{'hidden': !EditModalOpen}"
+    class=" ml-96 fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
 
     <div class=" w-full md:w-1/2 max-h-full md:h-1/2">
-
+        <div class="fixed inset-0 transition-opacity" (click)="closeEditModal()">
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+        </div>
         <!-- Modal content -->
         <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 ">
 
 
-            <button type="button" (click)="removeAlltags()"
+            <button type="button" (click)="removetagsAndCloseModel()"
                 class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
                 data-modal-hide="modal1">
                 <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -548,16 +551,18 @@
 </div>
 
 <!-- modal for flag post -->
-<div id="authentication-modal2" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
-    class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+<div [ngClass]="{'hidden': !FlagModalOpen}"
+    class="fixed ml-96  top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
 
     <div class=" w-full md:w-1/2 max-h-full md:h-modal">
-
+        <div class="fixed inset-0 transition-opacity" (click)="closeFlagModal()">
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+        </div>
         <!-- Modal content -->
         <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 ">
 
 
-            <button type="button"
+            <button type="button" (click)="closeFlagModal()"
                 class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
                 data-modal-hide="authentication-modal2">
                 <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
