--- a/src/app/component/experts/expert-home/expert-home.component.html
+++ b/src/app/component/experts/expert-home/expert-home.component.html
@@ -21,7 +21,7 @@
                     <div class="text-white font-medium text-lg whitespace-nowrap">Total Appoiments</div>
                     <div class="flex justify-center">
                         <p class="text-white pt-3 font-bold text-lg">
-                            edfedrfgrgrtg</p>
+                            10</p>
                     </div>
                 </div>
 
@@ -30,7 +30,7 @@
 
                     <p class="text-white font-medium text-lg whitespace-nowrap">Chat Revenue</p>
                     <div class="flex justify-center pt-2">
-                        <p class="text-white font-bold text-lg">fsdfgdgdfg</p>
+                        <p class="text-white font-bold text-lg">20₹</p>
                     </div>
                 </div>
                 <div
@@ -38,7 +38,7 @@
 
                     <p class="text-white font-medium text-lg whitespace-nowrap">Video Revenue</p>
                     <div class="flex justify-center pt-2">
-                        <p class="text-white font-bold text-lg">sdasdesdas₹</p>
+                        <p class="text-white font-bold text-lg">40₹</p>
                     </div>
                 </div>
                 <div
@@ -46,7 +46,7 @@
 
                     <p class="text-white font-medium text-lg whitespace-nowrap">Active Appoinment</p>
                     <div class="flex justify-center pt-2">
-                        <p class="text-white font-bold text-lg">fgfgdfgdf</p>
+                        <p class="text-white font-bold text-lg">50₹</p>
                     </div>
                 </div>
                 <!-- <div
@@ -74,71 +74,15 @@
         <div class="flex space-x-10 mt-40">
 
             <div class="rounded-2xl  shadow-lg   border w-fit  p-5  mt-5    ">
-                <app-piechart></app-piechart>
+                <app-barchart></app-barchart>
             </div>
             <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit    ">
-                <table
-                    class="w-fit m-5 z-0 text-sm text-left border-3 brightness-95 border-green-50  text-gray-500 dark:text-gray-400 ">
-                    <thead class="text-xs  text-white uppercase   bg-pink-600 dark:bg-gray-700 dark:text-gray-400">
-                        <tr>
-                            <th scope="col" class="px-6 py-3">
-                                No
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Name
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Email
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Phone
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Date of Joined
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Block
-                            </th>
-                            <!-- <th scope="col" class="px-6 py-3">
-                                <span class="sr-only">Edit</span>
-                            </th> -->
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr
-                            class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
-                            <td class="px-6 py-4 text-gray-900 font-medium">
-
-                            </td>
-                            <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-
-                            </td>
-                            <td class="px-6 py-4 text-gray-900 font-medium ">
-
-                            </td>
-                            <td class="px-6 py-4 text-gray-900 font-medium">
-
-                            </td>
-                            <td class="px-6 py-4 text-gray-900 font-medium">
-
-
-                            </td>
-                            <td class="px-6 py-4">
-
-                            </td>
-                            <!-- <td class="px-6 py-4 text-right">
-                                <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                            </td> -->
-                        </tr>
-
-
-                    </tbody>
-                </table>
+                <app-barchart></app-barchart>
             </div>
 
         </div>
 
-        <div class="flex space-x-10 mt-5 mb-10">
+        <!-- <div class="flex space-x-10 mt-5 mb-10">
             <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit  p-5  ">
                 <app-barchart></app-barchart>
             </div>
@@ -166,13 +110,13 @@
                             <th scope="col" class="px-6 py-3">
                                 Block
                             </th>
-                            <!-- <th scope="col" class="px-6 py-3">
+                            <th scope="col" class="px-6 py-3">
                             <span class="sr-only">Edit</span>
                         </th> -->
-                        </tr>
+        <!-- </tr>
                     </thead>
-                    <tbody>
-                        <tr
+                    <tbody> -->
+        <!-- <tr
                             class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
                             <td class="px-6 py-4 text-gray-900 font-medium">
 
@@ -192,17 +136,17 @@
                             </td>
                             <td class="px-6 py-4">
 
-                            </td>
-                            <!-- <td class="px-6 py-4 text-right">
+                            </td>  -->
+        <!-- <td class="px-6 py-4 text-right">
                             <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
                         </td> -->
-                        </tr>
+        <!-- </tr>
 
 
                     </tbody>
                 </table>
             </div>
-        </div>
+        </div> -->
 
     </main>
 </div>
